[tool.poetry]
name = "django-api-tools"
version = "0.1.0"
description = ""
authors = ["Orhan Hirsch <orhan.hirsch@oda.com>"]
readme = "README.md"
packages = [{include = "django_api_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
pytest-django = "^4.5.2"
flake8-black = "^0.3.6"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"