[tool.poetry]
name = "django-api-decorator"
version = "0.1.5"
description = "A collection of tools to build function based Django APIs"
authors = ["Oda <tech@oda.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kolonialno/django-api-decorator"
repository = "https://github.com/kolonialno/django-api-decorator"
packages = [{include = "django_api_decorator"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = ">=3"
pydantic = "^1.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.3"
flake8 = "^6.0.0"
pytest-django = "^4.5.2"
flake8-black = "^0.3.6"
mypy = "^0.981"
django-stubs = {extras = ["compatible-mypy"], version = "^1.13.1"}

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "tests.django_settings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"
